tests/snapshots/run_wpt_conformance__litert_pad_float16_1D_constant_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "pad.https.any.js",
    "pad float16 1D constant tensor default options",
    "litert",
    "PASS",
)
